<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#D85B5B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/social"
            tools:layout_editor_absoluteX="-36dp"
            tools:layout_editor_absoluteY="508dp" />


        <SearchView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="10dp"
            android:background="#1DEDB5B5"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/iconic"
            android:tint="#013147"
            app:srcCompat="@drawable/asset" />



    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/gridLayout"
        android:layout_width="427dp"
        android:layout_height="459dp"
        android:addStatesFromChildren="false"
        android:background="#F37C7C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/facebook"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="21dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/imageButton2"
            android:layout_toRightOf="@+id/imageButton2"
            android:background="#F37C7C"
            android:contentDescription="@string/github"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/github" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/gmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="30dp"
            android:background="#F37C7C"
            android:contentDescription="@string/bitbucket"
            android:scaleType="fitCenter"
            android:tint="#121111"
            app:srcCompat="@drawable/bitbucket" />

        <ImageButton
            android:id="@+id/drible"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/googleplus"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="23dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/android"
            android:layout_toRightOf="@+id/android"
            android:background="#F37C7C"
            android:contentDescription="@string/dribble"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/drible" />

        <ImageButton
            android:id="@+id/android"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/play"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/facebook"
            android:layout_toRightOf="@+id/facebook"
            android:background="#F37C7C"
            android:contentDescription="@string/androi"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/android" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/imageButton8"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/gmail"
            android:layout_toRightOf="@+id/gmail"
            android:background="#F37C7C"
            android:contentDescription="@string/fabebook"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/facebook" />

        <ImageButton
            android:id="@+id/gmail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/google"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="30dp"
            android:background="#F37C7C"
            android:contentDescription="@string/gmail"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gmail" />

        <ImageButton
            android:id="@+id/google"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="30dp"
            android:layout_toStartOf="@+id/imageButton8"
            android:layout_toLeftOf="@+id/imageButton8"
            android:background="#F37C7C"
            android:contentDescription="@string/google"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/google"
            tools:srcCompat="@drawable/youtube" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="29dp"
            android:layout_marginBottom="30dp"
            android:layout_toStartOf="@+id/play"
            android:layout_toLeftOf="@+id/play"
            android:background="#F37C7C"
            android:contentDescription="@string/insta"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/insta" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:layout_toStartOf="@+id/googleplus"
            android:layout_toLeftOf="@+id/googleplus"
            android:background="#F37C7C"
            android:contentDescription="@string/play"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/play" />

        <ImageButton
            android:id="@+id/googleplus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="30dp"
            android:background="#F37C7C"
            android:contentDescription="@string/googlep"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/googleplus" />

        <ImageButton
            android:id="@+id/link"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/android"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/imageButton"
            android:layout_toRightOf="@+id/imageButton"
            android:background="#F37C7C"
            android:contentDescription="@string/linkdin"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/link" />

        <ImageButton
            android:id="@+id/skype"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/drible"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="22dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/link"
            android:layout_toRightOf="@+id/link"
            android:background="#F37C7C"
            android:contentDescription="@string/skype"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/skype" />

        <ImageButton
            android:id="@+id/slack"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/imageButton2"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="30dp"
            android:background="#F37C7C"
            android:contentDescription="@string/slack"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/slack" />

        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/imageButton"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/slack"
            android:layout_toRightOf="@+id/slack"
            android:background="#F37C7C"
            android:contentDescription="@string/twitter"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/twitter" />

        <ImageButton
            android:id="@+id/webview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/link"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/twitter"
            android:layout_toRightOf="@+id/twitter"
            android:background="#F37C7C"
            android:contentDescription="@string/webview"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/webview" />

        <ImageButton
            android:id="@+id/whatsapp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/skype"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="29dp"
            android:layout_toEndOf="@+id/webview"
            android:layout_toRightOf="@+id/webview"
            android:background="#F37C7C"
            android:contentDescription="@string/whatsapp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/whatsapp" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/mypic"
        android:layout_width="129dp"
        android:layout_height="176dp"
        android:contentDescription="@string/scar"
        app:layout_constraintBottom_toBottomOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/oscar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nnadiukwu_chidiebere_oscar"

        android:textColor="#F37C7C"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toStartOf="@+id/mypic"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_developer"
        android:textColor="#F37C7C"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toStartOf="@+id/mypic"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>